--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
-project(jnp_kvfifo)
+project(jnp.kvfifo)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(jnp_kvfifo main.cpp)
+add_executable(jnp_kvfifo kvfifo.h main.cpp)
